--- a/src/templates/trainings/detail.twig
+++ b/src/templates/trainings/detail.twig
@@ -55,79 +55,76 @@
         </h6>
         <p>{{ event.description }}</p>
 
-        <hr/>
+        <section class="rounded-2xl bg-gray-100 p-6 mt-10">
+            <div class="w-full flex field">
+                <div class="heading flex-grow">
+                    <label class="text-xl inline-block w-full">Attendees</label>
+                    <span>You can import a .csv file or add a new attendee in the actions on the right.</span>
+                </div>
+                <a href="#" class="bg-gray-300 text-gray-800 font-bold py-2 px-3 text-sm rounded-lg">{{ "Import"|t('craft-attendees') }}</a>
+                <button-add label="{{ "Add"|t('craft-attendees') }}"></button-add>
+            </div>
 
-        <div class="w-full flex field">
-            <div class="heading flex-grow">
-                <label class="inline-block w-full">Attendees</label>
-                <span>You can import a .csv file or add a new attendee in the actions on the right.</span>
-            </div>
-            <a href="#" class="btn">{{ "Import"|t('craft-attendees') }}</a>
-            <button class="btn submit icon add">{{ "Add"|t('craft-attendees') }}</button>
-        </div>
+            <popup-add-attendee csrf="{{ craft.app.request.csrfToken }}" event="{{ event.id }}"></popup-add-attendee>
 
-        <div class="grid grid-cols-11 pt-2 bg-gray-100 rounded-tl-md rounded-tr-md border-t border-l border-r border-gray-200 border-solid">
-            <div class="col-span-2 px-3 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
-                School / Organisation
+            <div class="grid grid-cols-11 bg-gray-100 py-2">
+                <div class="col-span-3 p-3 text-left text-xs font-semibold text-gray-600 uppercase flex flex-nowrap items-center">
+                    <span class="inline-flex mb-0"><input type="checkbox" indeterminate="true"/></span>
+                    <span class="inline-flex pl-2">School / Organisation</span>
+                </div>
+                <div class="col-span-2 p-3 text-left text-xs font-semibold text-gray-600 uppercase">
+                    Name of attendee
+                </div>
+                <div class="col-span-3 p-3 text-left text-xs font-semibold text-gray-600 uppercase">
+                    Email
+                </div>
+                <div class="p-3 text-left text-xs font-semibold text-gray-600 uppercase">
+                    Days
+                </div>
+                <div class="p-3 text-left text-xs font-semibold text-gray-600 uppercase">
+                    Status
+                </div>
+                <div class="p-3 text-left text-xs font-semibold text-gray-600 uppercase">&nbsp;</div>
             </div>
-            <div class="px-3 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
-                Post code
-            </div>
-            <div class="col-span-2 px-3 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
-                Name of attendee
-            </div>
-            <div class="col-span-2 px-3 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
-                Email
-            </div>
-            <div class="px-3 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
-                Role
-            </div>
-            <div class="px-3 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
-                Days Attended
-            </div>
-            <div class="px-3 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
-                Newsletter
-            </div>
-            <div class="px-3 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">&nbsp;</div>
-        </div>
 
-        <form-attendee csrf="{{ craft.app.request.csrfToken }}" event="{{ event.id }}"></form-attendee>
+            <list-attendees csrf="{{ craft.app.request.csrfToken }}" event="{{ event.id }}"></list-attendees>
+        </section>
 
 {#        <table class="table-auto w-full">#}
 {#            <thead class="bg-gray-100">#}
 {#                <tr>#}
 {#                    <th class="px-3">#}
-{#                        <span class="py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">#}
+{#                        <span class="py-3 text-left text-xs font-semibold text-gray-600 uppercase">#}
 {#                            School / Organisation#}
 {#                        </span>#}
 {#                    </th>#}
 {#                    <th class="px-3">#}
-{#                        <span class="py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">#}
+{#                        <span class="py-3 text-left text-xs font-semibold text-gray-600 uppercase">#}
 {#                            Post code#}
 {#                        </span>#}
 {#                    </th>#}
 {#                    <th class="px-3">#}
-{#                        <span class="py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">#}
+{#                        <span class="py-3 text-left text-xs font-semibold text-gray-600 uppercase">#}
 {#                            Name of attendee#}
 {#                        </span>#}
 {#                    </th>#}
 {#                    <th class="px-3">#}
-{#                        <span class="py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">#}
+{#                        <span class="py-3 text-left text-xs font-semibold text-gray-600 uppercase">#}
 {#                            Email#}
 {#                        </span>#}
 {#                    </th>#}
 {#                    <th class="px-3">#}
-{#                        <span class="py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">#}
+{#                        <span class="py-3 text-left text-xs font-semibold text-gray-600 uppercase">#}
 {#                            Days Attended#}
 {#                        </span>#}
 {#                    </th>#}
 {#                    <th class="px-3">#}
-{#                        <span class="py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">#}
+{#                        <span class="py-3 text-left text-xs font-semibold text-gray-600 uppercase">#}
 {#                            Newsletter#}
 {#                        </span>#}
 {#                    </th>#}
 {#                    <th class="px-3">#}
-{#                        <span class="py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">#}
+{#                        <span class="py-3 text-left text-xs font-semibold text-gray-600 uppercase">#}
 {#                            Actions#}
 {#                        </span>#}
 {#                    </th>#}
