added count on the preview

--- a/src/templates/trainings/detail.twig
+++ b/src/templates/trainings/detail.twig
@@ -226,5 +226,5 @@
 {#        }) }}#}
     </div>
 
-    {{ craft.attendees.register('/src/js/attendees.ts', false, scriptTagOptions) }}
+    {{ craft.viteattendees.register('/src/js/attendees.ts', false, scriptTagOptions) }}
 {% endset %}
