bugfixed vite attendees

--- a/src/templates/dashboard/index.twig
+++ b/src/templates/dashboard/index.twig
@@ -57,7 +57,7 @@
 
 {# The content of the CP Section#}
 {% set content %}
-    {{ craft.attendees.register('/src/js/attendees.ts', false, scriptTagOptions) }}
+    {{ craft.viteattendees.register('/src/js/attendees.ts', false, scriptTagOptions) }}
     <h2>{{ "Dashboard CP Section body goes here"|t('craft-attendees') }}</h2>
 
 
