--- a/src/templates/_layouts/_cp.twig
+++ b/src/templates/_layouts/_cp.twig
@@ -1,5 +1,12 @@
 {% extends "_layouts/cp" %}
 
+{% js %}
+    window.Attendee = {{ {
+        "cpUrl": cpUrl()
+    }|json_encode|raw }}
+{% endjs %}
+
+
 {% set subnav = {
     "dashboard": { label: "Dashboard"|t('craft-attendees'), url: url(pluginCpUrl ~ '/dashboard') },
     "trainings": { label: "Trainings"|t('craft-attendees'), url: url(pluginCpUrl ~ '/trainings') },
